fix search label contrast issue. #3607

--- a/openscholar/themes/hwpi_college/css/hwpi_college.css
+++ b/openscholar/themes/hwpi_college/css/hwpi_college.css
@@ -314,7 +314,7 @@ h1#page-title {
 
 
 #search-block-form .form-item label {
-    color: #727272;
+    color: #444;
     font-family: arial,sans-serif;
     font-size: 12px;
    
